# frankensearch

./: .agent-mail.yaml  .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_PLAN_FOR_THE_QUILL_LEXICAL_ENGINE.md  Cargo.toml  DUELING_WIZARDS_REPORT.md  MODES_OF_REASONING_REPORT_AND_ANALYSIS_OF_PROJECT.md  README.md  UPGRADE_LOG.md  WIZARD_BLINDSPOTS_CC.md  WIZARD_BLINDSPOTS_GMI.md  WIZARD_IDEAS_CC.md  WIZARD_IDEAS_GMI.md  WIZARD_REACTIONS_CC.md  WIZARD_REACTIONS_GMI.md  WIZARD_REBUTTAL_CC.md  WIZARD_REBUTTAL_GMI.md  WIZARD_SCORES_CC_ON_GMI.md  WIZARD_SCORES_GMI_ON_CC.md  WIZARD_STEELMAN_CC.md  WIZARD_STEELMAN_GMI.md  install.sh
crates/frankensearch-core/: Cargo.toml  README.md
crates/frankensearch-core/benches/: canonicalize.rs  char_count_ab.rs  collapse_code_block_ab.rs  filter_prescreen.rs  fingerprint.rs  host_attribution_resolve.rs  parsed_query.rs  query_class.rs  shared_prefix_depth_ab.rs  simhash_tokenize_ab.rs  simhash_vote_simd.rs  strip_italic_underscores_ab.rs  truncate_chars_ab.rs  whitespace_norm_ab.rs
crates/frankensearch-core/src/: bench_support.rs  cache.rs  canonicalize.rs  collectors.rs  commit_replay.rs  config.rs  contract_sanity.rs  daemon.rs  decision_plane.rs  e2e_artifact.rs  error.rs  filter.rs  fingerprint.rs  generation.rs  graph.rs  host_adapter.rs  lib.rs  metrics.rs  metrics_eval.rs  parsed_query.rs  query_class.rs  shadow.rs  simd.rs  tracing_config.rs  traits.rs  types.rs
crates/frankensearch-core/tests/: schema_conformance.rs
crates/frankensearch-durability/: Cargo.toml  README.md
crates/frankensearch-durability/benches/: durability_bench.rs
crates/frankensearch-durability/src/: codec.rs  config.rs  file_protector.rs  fsvi_protector.rs  lib.rs  metrics.rs  repair_trailer.rs  tantivy_wrapper.rs
crates/frankensearch-embed/: Cargo.toml  README.md  build.rs
crates/frankensearch-embed/benches/: cache_replay.rs  hash_embed.rs  model2vec_batch_parallel.rs  model2vec_gather_prefetch.rs
crates/frankensearch-embed/examples/: minilm_embed_corpus.rs  potion_embed_corpus.rs
crates/frankensearch-embed/src/: api_embedder.rs  api_provider.rs  auto_detect.rs  batch_coalescer.rs  bundled_default_models.rs  cached_embedder.rs  fastembed_embedder.rs  hash_embedder.rs  lib.rs  model2vec_embedder.rs  model_cache.rs  model_download.rs  model_manifest.rs  model_registry.rs  simd.rs
crates/frankensearch-embed/tests/: model_integrity_tests.rs  model_manifest_tests.rs
crates/frankensearch-fsfs/: Cargo.toml  README.md
crates/frankensearch-fsfs/benches/: code_sidecar_score.rs  code_tokenize.rs  fuse_merge_ab.rs  lexical_count.rs  sniff_features.rs  truncate_middle_ab.rs
crates/frankensearch-fsfs/src/: agent_ergonomics.rs  alien_recommendations.rs  bead_self_doc.rs  catalog.rs  cli_e2e.rs  code_structure_sidecar.rs  concurrency.rs  config.rs  control_plane.rs  control_plane_error.rs  crate_registry.rs  degradation_advisor.rs  determinism.rs  evidence.rs  expected_loss.rs  explainability_screen.rs  explanation_payload.rs  file_classification.rs  high_cost_artifact.rs  incremental_change.rs  interaction_matrix.rs  interaction_primitives.rs  lexical_pipeline.rs  lib.rs  lifecycle.rs  main.rs  mount_info.rs  orchestration.rs  output_schema.rs  packaging.rs  pressure.rs  pressure_sensing.rs  privacy.rs  profiling.rs  provenance.rs  query_execution.rs  query_latency_optimization.rs  query_planning.rs  ranking_priors.rs  redaction.rs  (+11 more)
crates/frankensearch-fsfs/tests/: agent_contract_regression.rs  benchmark_baseline_matrix.rs  cli_command_tests.rs  cli_e2e_contract.rs  concurrency_stress.rs  deluxe_tui_e2e.rs  e2e_recall.rs  explanation_payload_contract.rs  filesystem_chaos.rs  pressure_simulation_harness.rs  privacy_redaction_suite.rs  profiling_harness_workflow.rs  schema_conformance.rs
crates/frankensearch-fusion/: Cargo.toml  README.md
crates/frankensearch-fusion/benches/: blend_aligned.rs  blend_reorder.rs  code_signal_probe_ab.rs  collect_limit_all.rs  doc_id_clone_sso.rs  docid_materialize_ab.rs  expand_fuse_ab.rs  explanation_clone_ab.rs  federated_appeared_in.rs  federated_fuse.rs  filter_match_ab.rs  fused_materialize.rs  graph_rank.rs  hubness_dot_ab.rs  hubness_penalty.rs  lexical_metadata_map.rs  materialize_clone.rs  merge_dedup_ab.rs  metadata_clone_ab.rs  mmr_reorder.rs  mmr_rerank.rs  negation_normalize_ab.rs  neighbor_smooth.rs  neighbor_smooth_recip_ab.rs  normalize_signal_ab.rs  nqc_adaptive_cost_ab.rs  nqc_cv_cost_ab.rs  pool_minmax_fuse.rs  pool_minmax_merge_ab.rs  prf_expand_ab.rs  progressive_replay.rs  rank_map.rs  real_hybrid_knownitem.rs  rrf_config_cost_ab.rs  rrf_fuse.rs  rrf_index_sort.rs  rrf_merge_fuse.rs  rrf_recip_ab.rs  rrf_sort_key.rs  rrf_sort_order.rs  (+6 more)
crates/frankensearch-fusion/src/: adaptive.rs  bench_support.rs  blend.rs  cache.rs  calibration.rs  circuit_breaker.rs  conformal.rs  daemon_fallback.rs  federated.rs  feedback.rs  graph_rank.rs  hubness.rs  incremental.rs  interaction_oracles.rs  lib.rs  mmr.rs  normalize.rs  ope.rs  phase_gate.rs  prf.rs  queue.rs  refresh.rs  repro_blend.rs  rrf.rs  searcher.rs  smooth.rs  sync_searcher.rs
crates/frankensearch-fusion/tests/: composition_harness.rs  interaction_integration.rs  interaction_unit.rs  sync_searcher_tests.rs
crates/frankensearch-index/: Cargo.toml  README.md
crates/frankensearch-index/benches/: adsampling_transposed_scan.rs  (+46 more)
crates/frankensearch-lexical/: Cargo.toml  README.md
crates/frankensearch-ops/: Cargo.toml  README.md
crates/frankensearch-quill/: Cargo.toml
crates/frankensearch-quill-gauntlet/: Cargo.toml  oracle-version-contract.json
crates/frankensearch-rerank/: Cargo.toml  README.md
crates/frankensearch-storage/: Cargo.toml  README.md
crates/frankensearch-tui/: Cargo.toml  README.md
frankensearch/: Cargo.toml  README.md
frankensearch/benches/: index_builder_lexical_staging.rs  search_bench.rs
frankensearch/examples/: basic_search.rs  bench_quick.rs  validate_fusion.rs
frankensearch/src/: index_builder.rs  lib.rs
frankensearch/tests/: cross_component.rs  reconciliation.rs
tools/optimize_params/: Cargo.toml
(+517 files in other folders)
