[workspace]
resolver = "3"
members = [
    "crates/frankensearch-core",
    "crates/frankensearch-embed",
    "crates/frankensearch-index",
    "crates/frankensearch-lexical",
    "crates/frankensearch-fusion",
    "crates/frankensearch-rerank",
    "crates/frankensearch-storage",
    "crates/frankensearch-durability",
    "crates/frankensearch-fsfs",
    "crates/frankensearch-tui",
    "crates/frankensearch-ops",
    "frankensearch",
    "tools/optimize_params",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/frankensearch"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
frankensearch-core = { version = "0.1.0", path = "crates/frankensearch-core" }
frankensearch-embed = { version = "0.1.0", path = "crates/frankensearch-embed", default-features = false }
frankensearch-index = { version = "0.1.0", path = "crates/frankensearch-index" }
frankensearch-lexical = { version = "0.1.0", path = "crates/frankensearch-lexical" }
frankensearch-fusion = { version = "0.1.0", path = "crates/frankensearch-fusion" }
frankensearch-rerank = { version = "0.1.0", path = "crates/frankensearch-rerank" }
frankensearch-storage = { version = "0.1.0", path = "crates/frankensearch-storage" }
frankensearch-durability = { version = "0.1.0", path = "crates/frankensearch-durability" }
frankensearch-fsfs = { version = "0.1.0", path = "crates/frankensearch-fsfs" }
frankensearch-tui = { version = "0.1.0", path = "crates/frankensearch-tui" }
frankensearch-ops = { version = "0.1.0", path = "crates/frankensearch-ops" }

# Async runtime (structured concurrency, NO tokio)
# test-internals enables LabRuntime for deterministic testing
asupersync = { version = "0.2.0", path = "../asupersync", features = ["proc-macros", "test-internals"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-rust = "0.1.3"

# Error handling
thiserror = "2"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Data parallelism (CPU-bound vector ops, NOT an async runtime)
rayon = "1.10"

# SIMD and f16 quantization (unconditional for frankensearch-index)
half = "2.4"
wide = "0.7"

# Memory-mapped I/O
memmap2 = "0.9"

# Embedder dependencies (feature-gated per crate)
fastembed = "4.9"
safetensors = "0.5"
tokenizers = "0.21"

# Full-text search
tantivy = "0.22"

# ONNX Runtime for cross-encoder reranking
ort = "2.0.0-rc.9"
ndarray = "0.16"

# HNSW approximate nearest neighbors
hnsw_rs = "0.3"

# CRC32 checksums for FSVI index integrity
crc32fast = "1"

# Unicode normalization
unicode-normalization = "0.1"

# Platform-standard directories for model storage
dirs = "6"

# TOML parsing for configuration surfaces
toml = "0.8"

# SHA-256 verification for model manifests
sha2 = "0.10"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

# Date/time formatting/parsing for telemetry RFC3339 timestamps
time = { version = "0.3", features = ["formatting", "parsing"] }

# System information (CPU, memory, etc.)
sysinfo = "0.33"

# FrankenTUI terminal UI framework
ftui-core = { version = "0.2.0", path = "../frankentui/crates/ftui-core" }
ftui-render = { version = "0.2.0", path = "../frankentui/crates/ftui-render" }
ftui-style = { version = "0.2.0", path = "../frankentui/crates/ftui-style" }
ftui-text = { version = "0.2.0", path = "../frankentui/crates/ftui-text" }
ftui-layout = { version = "0.2.0", path = "../frankentui/crates/ftui-layout" }
ftui-widgets = { version = "0.2.0", path = "../frankentui/crates/ftui-widgets" }
ftui-tty = { version = "0.2.0", path = "../frankentui/crates/ftui-tty" }
ftui-backend = { version = "0.2.0", path = "../frankentui/crates/ftui-backend" }

[workspace.lints.rust]
# `deny` instead of `forbid` so crates that need unsafe (e.g. mmap) can opt in.
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
