[package]
name = "frankensearch"
version = "0.1.0"
description = "Two-tier hybrid search for Rust: sub-millisecond initial results, quality-refined rankings in 150ms"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["hash"]
hash = ["frankensearch-embed/hash"]
model2vec = ["frankensearch-embed/model2vec"]
fastembed = ["frankensearch-embed/fastembed"]
lexical = ["dep:frankensearch-lexical", "frankensearch-fusion/lexical"]
storage = ["dep:frankensearch-storage"]
durability = ["dep:frankensearch-durability"]
fts5 = ["storage", "frankensearch-storage/fts5"]
rerank = ["dep:frankensearch-rerank"]
ann = ["frankensearch-index/ann"]
download = ["frankensearch-embed/download"]
semantic = ["hash", "model2vec", "fastembed"]
hybrid = ["semantic", "lexical"]
persistent = ["hybrid", "storage"]
durable = ["persistent", "durability"]
full = ["durable", "rerank", "ann", "download"]
full-fts5 = ["full", "fts5"]

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-embed = { workspace = true }
frankensearch-index = { workspace = true }
frankensearch-lexical = { workspace = true, optional = true }
frankensearch-fusion = { workspace = true }
frankensearch-rerank = { workspace = true, optional = true }
frankensearch-storage = { workspace = true, optional = true }
frankensearch-durability = { workspace = true, optional = true }
asupersync = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }
tempfile = "3"
frankensearch-core = { workspace = true }
frankensearch-embed = { workspace = true }
frankensearch-index = { workspace = true }
frankensearch-fusion = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "search_bench"
harness = false

[lints]
workspace = true
