[package]
name = "frankensearch-core"
version = "0.2.1"
description = "Core traits, types, and error types for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
asupersync = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
proptest = { workspace = true }

[lints]
workspace = true
