[package]
name = "frankensearch-core"
version = "0.2.1"
description = "Core traits, types, and error types for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
# Exposes `bench_support` (the alternating-round paired sampler + A/A null control) to every
# crate's benches. std-only, never enabled by a shipping profile. See docs/PERF_LEDGER.md
# (2026-07-10 null-control harness) and bd-zgq6.
bench-internals = []

[dependencies]
asupersync = { workspace = true }
thiserror = { workspace = true }
compact_str = { version = "0.9", features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
proptest = { workspace = true }
criterion = { workspace = true }
unicode-normalization = { workspace = true }

# ASCII fast-path vs full-NFC canonicalization (indexing/query hot path).
[[bench]]
name = "canonicalize"
harness = false

[[bench]]
name = "query_class"
harness = false

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "filter_prescreen"
harness = false

[[bench]]
name = "parsed_query"
harness = false

[[bench]]
name = "host_attribution_resolve"
harness = false

[lints]
workspace = true

[[bench]]
name = "simhash_vote_simd"
harness = false

[[bench]]
name = "whitespace_norm_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "truncate_chars_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "char_count_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "simhash_tokenize_ab"
harness = false
required-features = ["bench-internals"]
