[package]
name = "frankensearch-durability"
version = "0.2.0"
description = "RaptorQ durability primitives for frankensearch indices"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frankensearch-core = { workspace = true }
fsqlite-core = "0.1.2"
fsqlite-error = "0.1.2"
fsqlite-types = "0.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = { workspace = true }

[features]
# Engine-neutral by construction (bd-tkjm): durability primitives compose with
# any engine through the generic FileProtector boundary; the retired Tantivy
# wrapper is no longer built (retirement sweep: quill-e9.3).
default = []
# Exposes bench-only twins (e.g. FileProtector::verify_and_repair_file_no_reuse) for A/B benches.
bench-internals = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "durability_bench"
harness = false

[lints]
workspace = true
