[package]
name = "frankensearch-embed"
version = "0.1.0"
description = "Embedder implementations for frankensearch (hash, model2vec, fastembed)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["hash"]
hash = []
model2vec = ["dep:safetensors", "dep:tokenizers"]
fastembed = ["dep:fastembed"]
download = ["asupersync/tls", "asupersync/tls-webpki-roots"]

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }

# Feature-gated embedder dependencies
safetensors = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[dev-dependencies]
asupersync = { workspace = true }
tempfile = "3"
safetensors = { workspace = true }
tokenizers = { workspace = true }

[lints]
workspace = true
