[package]
name = "frankensearch-embed"
version = "0.2.1"
description = "Embedder implementations for frankensearch (hash, model2vec, fastembed)"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = ["hash"]
hash = []
model2vec = ["dep:safetensors", "dep:tokenizers"]
# fastembed v5's `hf-hub-rustls-tls` feature does NOT pass
# default-features = false to hf-hub, so hf-hub still pulls native-tls
# (openssl-sys) on top of rustls. We pull openssl-sys explicitly with the
# `vendored` feature so musl/aarch64/intel-darwin cross-compile works
# without a system OpenSSL toolchain. The dep is gated under the same
# `fastembed` feature it follows so non-fastembed builds skip it entirely.
fastembed = ["dep:fastembed", "dep:openssl-sys"]
download = ["asupersync/tls", "asupersync/tls-webpki-roots"]
api = ["asupersync/tls", "asupersync/tls-webpki-roots"]
bundled-default-models = ["model2vec", "fastembed"]

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }

# Feature-gated embedder dependencies
safetensors = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }
# Pulled in only when fastembed is enabled — see comment on the
# `fastembed` feature above for why we vendor openssl.
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
tempfile = "3"
safetensors = { workspace = true }
tokenizers = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
