[package]
name = "frankensearch-fsfs"
version = "1.3.0"
description = "Standalone fsfs CLI for two-tier hybrid local search"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
keywords = ["search", "cli", "semantic", "bm25", "hybrid"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

[features]
default = ["embedded-models"]
embedded-models = ["frankensearch-embed/bundled-default-models", "frankensearch-embed/model2vec", "frankensearch-embed/fastembed"]
vendored-openssl = ["openssl"]
# Shared null-control bench harness (frankensearch_core::bench_support). Never a shipping profile.
bench-internals = ["frankensearch-core/bench-internals"]
# Transitional G2.5 oracle dependency. Runtime opt-in remains default-off.
shadow-oracle = ["dep:frankensearch-lexical"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fsfs"
path = "src/main.rs"

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-embed = { workspace = true, default-features = false, features = ["hash", "download"] }
frankensearch-index = { workspace = true }
frankensearch-quill = { workspace = true }
frankensearch-lexical = { workspace = true, optional = true }
frankensearch-storage = { workspace = true }
frankensearch-tui = { workspace = true }
ftui-core = { workspace = true }
ftui-layout = { workspace = true }
ftui-render = { workspace = true }
ftui-style = { workspace = true }
ftui-text = { workspace = true }
ftui-widgets = { workspace = true }
ftui-tty = { workspace = true }
ftui-backend = { workspace = true }
ftui-extras = { workspace = true, features = ["markdown"] }
# MIGRATION SHIM (temporary): fsfs's binary entrypoints still mint ambient
# contexts via Cx::for_request() (main.rs:188, runtime.rs:1563, runtime.rs:6880),
# which asupersync 0.3.2+ cfg-gates behind test-internals. fsfs is a LEAF
# binary crate — no lib crate or external consumer (e.g. HFDT) has it in
# their graph, so this does NOT re-leak test-internals downstream. Proper fix:
# migrate the three sites to runtime-injected contexts (spawn_with_cx /
# runtime-attached Cx) per the asupersync capability model, then drop this.
asupersync = { workspace = true, features = ["test-internals"] }
ahash = { workspace = true }
# compact_str: SSO short-string type (inline <=24 bytes, zero heap alloc) for
# lexical token text — the per-token to_ascii_lowercase heap alloc dominated
# tokenize_lexical emission. Already resolved in the workspace lock (fusion dep).
compact_str = "0.9"
fsqlite = "0.1.2"
fsqlite-types = "0.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
toon-rust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
signal-hook = "0.4"
libc = "0.2"
sysinfo = { workspace = true }
notify = "8.2.0"
ignore = "0.4"
sha2 = { workspace = true }
pdf-extract = { workspace = true }
tempfile = "3"
ureq = { version = "3", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
frankensearch-lexical = { workspace = true }
proptest = { workspace = true }
jsonschema = "0.46"
criterion = { workspace = true }

[[bench]]
name = "sniff_features"
harness = false

[[bench]]
name = "lexical_count"
harness = false

[[bench]]
name = "code_tokenize"
harness = false

[[bench]]
name = "code_sidecar_score"
harness = false

[[bench]]
name = "fuse_merge_ab"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "truncate_middle_ab"
harness = false

[lints]
workspace = true
