[package]
name = "frankensearch-fusion"
version = "0.2.1"
description = "RRF fusion, score blending, and two-tier progressive search for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
lexical = ["dep:frankensearch-lexical"]
rerank = ["dep:frankensearch-rerank"]
graph = []

[dependencies]
frankensearch-core = { workspace = true }
frankensearch-embed = { workspace = true }
frankensearch-index = { workspace = true }
frankensearch-lexical = { workspace = true, optional = true }
frankensearch-rerank = { workspace = true, optional = true }
asupersync = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
time = { workspace = true }

[dev-dependencies]
# test-internals: asupersync::test_utils for #[cfg(test)] (workspace dep is default-features=false)
asupersync = { workspace = true, features = ["test-internals"] }
# compact_str: SSO-string clone-cost probe for the limit_all doc_id materialization
# lever (dev-only; already a transitive workspace dep). See doc_id_clone_sso bench.
compact_str = "0.9"
tempfile = "3"
tracing-test = "0.2"
criterion = { workspace = true }
ahash = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "lexical_metadata_map"
harness = false

[[bench]]
name = "mmr_reorder"
harness = false

[[bench]]
name = "rrf_fuse"
harness = false

[[bench]]
name = "federated_fuse"
harness = false

[[bench]]
name = "blend_reorder"
harness = false

[[bench]]
name = "sync_int8_fetch"
harness = false

[[bench]]
name = "mmr_rerank"
harness = false

[[bench]]
name = "graph_rank"
harness = false

[[bench]]
name = "rank_map"
harness = false

[[bench]]
name = "score_map"
harness = false

[[bench]]
name = "fused_materialize"
harness = false

[[bench]]
name = "vector_materialize"
harness = false

[lints]
workspace = true

[[bench]]
name = "progressive_replay"
harness = false

[[bench]]
name = "materialize_clone"
harness = false

[[bench]]
name = "rrf_sort_key"
harness = false

[[bench]]
name = "rrf_sort_order"
harness = false

[[bench]]
name = "rrf_merge_fuse"
harness = false

[[bench]]
name = "blend_aligned"
harness = false

[[bench]]
name = "collect_limit_all"
harness = false

[[bench]]
name = "federated_appeared_in"
harness = false

[[bench]]
name = "doc_id_clone_sso"
harness = false

[[bench]]
name = "rrf_index_sort"
harness = false

[[bench]]
name = "docid_materialize_ab"
harness = false

[[bench]]
name = "metadata_clone_ab"
harness = false

[[bench]]
name = "explanation_clone_ab"
harness = false

[[bench]]
name = "rrf_recip_ab"
harness = false

[[bench]]
name = "scoredresult_box_ab"
harness = false
