[package]
name = "frankensearch-index"
version = "0.1.2"
description = "FSVI vector index, SIMD dot product, and top-k search for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
ann = ["dep:hnsw_rs", "dep:serde_json"]

[dependencies]
frankensearch-core = { workspace = true }
half = { workspace = true }
wide = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }

# Optional ANN
hnsw_rs = { workspace = true, optional = true }

[dev-dependencies]
asupersync = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
