[package]
name = "frankensearch-index"
version = "0.2.1"
description = "FSVI vector index, SIMD dot product, and top-k search for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
ann = ["dep:hnsw_rs", "dep:serde_json"]

[dependencies]
frankensearch-core = { workspace = true }
half = { workspace = true }
wide = { workspace = true }
bytemuck = "1"
memmap2 = { workspace = true }
crc32fast = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }

# Optional ANN
hnsw_rs = { workspace = true, optional = true }

[dev-dependencies]
asupersync = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# For the head-to-head baseline kernels inside benches/dot_product.rs.
half = { workspace = true }
wide = { workspace = true }

# SIMD dot-product hot-loop benchmarks (brute-force vector top-k inner loop).
[[bench]]
name = "dot_product"
harness = false

# HNSW (ANN) vs flat brute-force vector search — lever validation (latency + recall).
[[bench]]
name = "hnsw_vs_flat"
harness = false

# int8 ADC two-pass vs flat exact — lever validation (recall + latency over mult).
[[bench]]
name = "int8_two_pass"
harness = false

# FSVI (file-backed) int8 two-pass vs flat exact — standalone large-N vector search.
[[bench]]
name = "fsvi_int8_two_pass"
harness = false

[lints]
workspace = true
