[package]
name = "frankensearch-index"
version = "0.2.1"
description = "FSVI vector index, SIMD dot product, and top-k search for frankensearch"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []
ann = ["dep:hnsw_rs", "dep:serde_json"]

[dependencies]
frankensearch-core = { workspace = true }
half = { workspace = true }
wide = { workspace = true }
bytemuck = "1"
memmap2 = { workspace = true }
crc32fast = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }

# Optional ANN
hnsw_rs = { workspace = true, optional = true }

[dev-dependencies]
asupersync = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# For the head-to-head baseline kernels inside benches/dot_product.rs.
half = { workspace = true }
wide = { workspace = true }

# SIMD dot-product hot-loop benchmarks (brute-force vector top-k inner loop).
[[bench]]
name = "quantize_slab"
harness = false

[[bench]]
name = "winners_sort"
harness = false

[[bench]]
name = "dot_product"
harness = false

# HNSW (ANN) vs flat brute-force vector search — lever validation (latency + recall).
[[bench]]
name = "hnsw_vs_flat"
harness = false

# int8 ADC two-pass vs flat exact — lever validation (recall + latency over mult).
[[bench]]
name = "int8_two_pass"
harness = false

# REAL-embedding (potion/model2vec) validation of int8/4-bit quant + rotation lever.
[[bench]]
name = "real_embed_quant"
harness = false

# REAL-embedding validation of the HNSW ANN recall-certificate arc (--features ann).
[[bench]]
name = "real_embed_ann"
harness = false

# FSVI (file-backed) int8 two-pass vs flat exact — standalone large-N vector search.
[[bench]]
name = "fsvi_int8_two_pass"
harness = false

# FSVI 4-bit (16-level) two-pass vs flat exact + int8 — recall + latency.
[[bench]]
name = "fsvi_4bit_two_pass"
harness = false

[[bench]]
name = "filtered_gather"
harness = false

[[bench]]
name = "batched_query_scan"
harness = false

[[bench]]
name = "f16_dot_ilp"
harness = false

[[bench]]
name = "i8_dot_ilp"
harness = false

[[bench]]
name = "max_reduction"
harness = false

[lints]
workspace = true

[[bench]]
name = "hnsw_vs_flat_100k"
harness = false

[[bench]]
name = "ann_stratified_ef"
harness = false

# Vector-tier known-item recall vs query length on real embeddings (index-only, light).
[[bench]]
name = "real_qlen_vector"
harness = false

[[bench]]
name = "early_abandon_scan"
harness = false

[[bench]]
name = "transposed_abandon_scan"
harness = false

[[bench]]
name = "adsampling_transposed_scan"
harness = false

[[bench]]
name = "cluster_ordered_scan"
harness = false

[[bench]]
name = "rowmajor_prefilter_scan"
harness = false

[[bench]]
name = "bucketed_transposed_scan"
harness = false

[[bench]]
name = "residual_abandon_scan"
harness = false

[[bench]]
name = "residual_ilp_scan"
harness = false
