[package]
name = "frankensearch-lexical"
version = "0.1.0"
description = "Tantivy BM25 full-text search integration for frankensearch"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frankensearch-core = { workspace = true }
asupersync = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
